ajout du composent search word
Co-authored-by: mael.guillossou@outlook.com <mael.guillossou@outlook.com>

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h1>
-   {{ title }}
-  </h1>
+  <mat-toolbar color="primary">{{ title }}</mat-toolbar>
 </div>
+
+<app-search-word></app-search-word>
