Ajout filtre de recherche de mot

--- a/client/src/app/search-word/search-word.component.html
+++ b/client/src/app/search-word/search-word.component.html
@@ -11,6 +11,7 @@
       <mat-option *ngFor="let word of words" [value]="word.french">
         {{word.french}} - {{ word.korean }}
       </mat-option>
-    </mat-autocomplete> 
+    </mat-autocomplete>
   </mat-form-field>
+      <button mat-button color="primary">Rechercher</button>
 </form>
