Ajout spinner recherche & vide tableau words

--- a/client/src/app/search-word/search-word.component.html
+++ b/client/src/app/search-word/search-word.component.html
@@ -1,5 +1,5 @@
 <form>
-  <mat-form-field>
+  <mat-form-field class="search-field">
     <mat-label>Rechercher un mot</mat-label>
     <input type="text"
            placeholder="Ex : arbre"
@@ -7,8 +7,9 @@
            matInput
            [matAutocomplete]="auto"
            (input)="valuechange($event.target.value)">
+    <mat-spinner class="spinner" diameter="14" *ngIf="!hidden"></mat-spinner>
     <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let word of words" [value]="word.french">
+      <mat-option *ngFor="let word of words" [value]="word.id">
         {{word.french}} - {{ word.korean }}
       </mat-option>
     </mat-autocomplete>
